# lizz-yt-dlp

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
android-native-media/: build.gradle.kts
android-native-media/src/main/cpp/: CMakeLists.txt  config.h  ytdl_android_media.cpp
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: lizz-ytdl-android-library.gradle.kts  (+3 more)
docs/: HOW_TO_ADD_NEW_PROVIDER.md  README.md  RELEASE_CHECKLIST.md  USAGE.md  android-native-media.md  architecture.md  findings-and-reimplementation.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: build.gradle.kts
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
sample-cli/: build.gradle.kts
sample-compose/: build.gradle.kts
sample-terminal/: build.gradle.kts
smoke-tests/kmp-consumer/: build.gradle.kts  settings.gradle.kts
youtube-downloader-core/: build.gradle.kts
youtube-downloader-core/api/: youtube-downloader-core.klib.api
youtube-downloader-core/api/jvm/: youtube-downloader-core.api
youtube-downloader-engine-youtube/: build.gradle.kts
youtube-downloader-engine-youtube/api/: youtube-downloader-engine-youtube.klib.api
youtube-downloader-engine-youtube/api/jvm/: youtube-downloader-engine-youtube.api
(+124 files in other folders)
